fix: demonstrate how to prefix your project files to avoid style bleed in the generated pattern library. update the pattern library example to show style inherited from the example robust project

--- a/documentation/sugarcoat/styles/base/defaults.scss
+++ b/documentation/sugarcoat/styles/base/defaults.scss
@@ -1,24 +1,18 @@
-html {
-  box-sizing: border-box;
+body {
+    margin: 0;
+    padding: 0;
 }
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 .sugar-page-wrapper {
     position: relative;
     overflow: hidden;
 }
 .sugar-masthead {
-    text-align: center;
     padding-top: 50px;
     padding-bottom: 25px;
-    
+
     h1 {
         font-size: 2.5rem;
+        font-family: 'Helvetica';
     }
     img {
         width: 65px;
@@ -81,6 +75,7 @@ html {
 		}
 	}
 	pre {
+        box-sizing: border-box;
 		padding: 1.5rem 1rem;
 		background-color: #f1f1f1;
 		font-family: 'Courier';
@@ -122,7 +117,7 @@ html {
         margin: 0;
         width: 100%;
         color: #666;
-        
+
         &:before {
             content: 'description';
         }
